--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -97,6 +97,7 @@ styleshet to menu lateral
     width: 220px;
     height: 100%;
     background: #fff;
+    z-index: 5;
     border-right: 1px solid #e9e9e9;
     box-shadow: 0 0 15px rgb(0, 0, .15);
 }
@@ -132,3 +133,94 @@ styleshet to menu lateral
 #principal ul li a:hover{
     color: #00ff9c;
 }
+/*
+styleshet
+
+*/
+#view-conteudo{
+    position: fixed;
+    float: left;
+    width: 100%;
+    height: 100%;
+    padding: 20px 20px 20px 240px;
+    z-index: 1;
+}
+
+/* CSS para o formulário */
+/* Estilo geral do formulário */
+form.form-padrao {
+    float: left;
+    width: 100%;
+    box-sizing: border-box; /* Inclui padding e border na largura total */
+}
+
+/* Estilo para os labels dentro do formulário */
+form.form-padrao label {
+    float: left;
+    width: 49%;
+    height: auto; /* Ajusta a altura para que o conteúdo se ajuste */
+    padding: 7px 15px; /* Adiciona algum padding para espaçamento */
+    border: 1px solid #e9e9e9;
+    background: #fff;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    box-sizing: border-box; /* Inclui padding e border na largura total */
+    display: flex; /* Usa flexbox para alinhamento */
+    flex-direction: column; /* Alinha o conteúdo em coluna */
+}
+
+/* Margem esquerda para labels em posições ímpares */
+form.form-padrao label:nth-of-type(odd) {
+    margin-left: 2%;
+}
+
+/* Estilo para o texto dentro dos labels */
+form.form-padrao label span {
+    float: left;
+    width: 100%;
+    font: 400 .75em 'Arial', sans-serif;
+    color: #c7c7c7;
+    padding-bottom: 5px;
+}
+
+/* Estilo específico para inputs dentro dos labels */
+form.form-padrao label input[type="text"],
+form.form-padrao label input[type="password"] {
+    float: left;
+    width: calc(100% - 14px); /* Ajusta a largura para considerar o padding do label */
+    color: #5c5c5c;
+    font: 400 1.25em 'Arial', sans-serif;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #e9e9e9; /* Adiciona uma borda inferior */
+    margin-top: 5px; /* Espaçamento entre o texto e o campo */
+    padding: 5px 0; /* Adiciona padding interno */
+    box-sizing: border-box; /* Inclui padding e border na largura total */
+}
+
+/* Estilo específico para o botão submit */
+form.form-padrao label.submit {
+    background: #0ad181;
+    border: 1px solid #0aaa67;
+    text-align: center;
+    padding: 0; /* Remove o padding para o botão */
+    margin-left: 0; /* Remove margem esquerda */
+}
+
+form.form-padrao label.submit button {
+    width: 100%;
+    height: 50px;
+    font-weight: 800;
+    text-transform: uppercase;
+    color: #f9f9f9;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+}
+
+/* Estilo para o botão submit ao passar o mouse */
+form.form-padrao label.submit button:hover {
+    background: #0aaa67;
+}
+
+
