--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -222,5 +222,24 @@ form.form-padrao label.submit button {
 form.form-padrao label.submit button:hover {
     background: #0aaa67;
 }
+.default_table{
+    float: left;
+    width: 100%;
+    background: #fff;
+    border: 1px solid #e9e9e9;
+    padding: 10px;
+    font: 400 .9em'Arial';
+    color: #5c5c5c;
+}
 
-
+.default_table thead{
+    text-transform: uppercase;
+    font-size: .8em;
+    font-weight: 800;
+}
+.default_table thead tr{
+    height: 40px;
+}
+.default_table tbody tr{
+    height: 30px;
+}
